# adaptive-cpp-http-server

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
core/: Route.hpp  adaptivelimit.hpp  logging.cpp  logging.hpp  server.cpp  server.hpp
http/: httpreq.cpp  httpreq.hpp  httpres.hpp
static/site/: about.html  app.js  index.html  neon.css
utils/: fileHandle.cpp  filehandle.hpp
